[gd_scene load_steps=2 format=3 uid="uid://cru72a0rwa46l"]

[ext_resource type="Script" uid="uid://ctflg4ak6jfvy" path="res://scripts/main_controls.gd" id="1_bxfys"]

[node name="MainControls" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 62.0
script = ExtResource("1_bxfys")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PreviousBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "prev"

[node name="PlayPauseBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "play/pause"

[node name="NextBtn" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "next"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 2
value = 50.0
rounded = true
show_percentage = false

[connection signal="pressed" from="HBoxContainer/PreviousBtn" to="." method="_on_previous_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayPauseBtn" to="." method="_on_play_pause_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/NextBtn" to="." method="_on_next_btn_pressed"]
